--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 Git, Sass and React. I still have to improve some of them but I would also like to learn Node, which I
                 know a bit, and many other things as well. There's a long road in front of me but the journey of a
                 thousand miles begins with a single step and these are one of my first. I don't like this game, I love
-                it and I can't wait to do some other projects and improve my skills. Here you can take a glance at some
+                it and I can't wait to do some other projects and improve my skills. You can take a look at some
                 of my work, the rest is on my GitHub profile so feel free to check that out as well.</p>
         </div>
         <div class="workContainer">
