--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     can
                     download my CV or scroll the page to see my work.</p>
             </div>
-            <a href='#' id='cv'>Download CV</a>
+            <a href='cv/BojanMilutinovic_CV.pdf' download id='cv'>Download CV</a>
         </section>
         <section id='myWork'>
             <div class="section-content">
