--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                             JavaScript</div>
                     </div>
                 </a>
+                <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="responsiveWebpage imgBackground"></div>
+                        <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
+                    </div>
+                </a>
                 <div class="work">
                     <div class="webPage imgBackground progress"></div>
                     <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
