github search project update

--- a/index.html
+++ b/index.html
@@ -96,10 +96,23 @@
                         <div class="about-project">Commercial web page.<br>HTML5, Bootstrap</div>
                     </div>
                 </a>
+                <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="scrollAnimatedWebpage imgBackground"></div>
+                        <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
+                    </div>
+                </a>
                 <a href="https://modest-golick-efbbc9.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="loanCalculator imgBackground"></div>
                         <div class="about-project">The app will calculate your loan rate.<br>HTML5, JavaScript,
+                            Bootstrap</div>
+                    </div>
+                </a>
+                <a href="https://practical-minsky-17ebe4.netlify.com/" target='_blank'>
+                    <div class="work">
+                        <div class="githubFinder imgBackground"></div>
+                        <div class="about-project">Search for GitHub users.<br>HTML5, JavaScript,
                             Bootstrap</div>
                     </div>
                 </a>
