--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
                     of my work, the rest is on my GitHub profile so feel free to check that out as well.</p>
             </div>
             <div class="workContainer">
+                    <a href="https://modest-newton-c47f34.netlify.com/" target="_blank">
+                        <div class="work">
+                            <div class="webPage imgBackground"></div>
+                            <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
+                        </div>
+                    </a>
+                    <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
+                        <div class="work">
+                            <div class="scrollAnimatedWebpage imgBackground"></div>
+                            <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
+                        </div>
+                    </a>
+                    <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
+                        <div class="work">
+                            <div class="responsiveWebpage imgBackground"></div>
+                            <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
+                        </div>
+                    </a>
                 <a href="https://jolly-swanson-ba2fb1.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="typenspeak imgBackground"></div>
@@ -80,28 +98,14 @@
                             JavaScript</div>
                     </div>
                 </a>
-                <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
-                    <div class="work">
-                        <div class="responsiveWebpage imgBackground"></div>
-                        <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
-                    </div>
-                </a>
-                <div class="work">
-                    <div class="webPage imgBackground progress"></div>
-                    <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
-                </div>
+                
                 <a href="https://relaxed-kowalevski-f1dc94.netlify.com/#home-section" target="_blank">
                     <div class="work">
                         <div class="bootstrapWebpage imgBackground"></div>
                         <div class="about-project">Commercial web page.<br>HTML5, Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
-                    <div class="work">
-                        <div class="scrollAnimatedWebpage imgBackground"></div>
-                        <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
-                    </div>
-                </a>
+                
                 <a href="https://modest-golick-efbbc9.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="loanCalculator imgBackground"></div>
