--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=K2D:400,700|Quicksand:400,700" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
@@ -35,17 +35,22 @@
             </nav>
         </header>
         <main id='home'>
-            <h1 class='main-heading'><span class='letters switch'>B</span><span class='letters switch'>O</span><span
-                    class='letters'>J</span><span class='letters'>A</span><span class='switch letters'>N</span></h1>
-            <h3 class='sub-heading text-shadow'>front-end developer</h3>
+            <h1 class='main-heading'>
+                <span class='letters'>B</span>
+                <span class='letters'>o</span>
+                <span class='letters'>j</span>
+                <span class='letters'>a</span>
+                <span class='letters'>n</span>
+            </h1>
+            <h3 class='sub-heading text-shadow quicksand'>front-end developer</h3>
             <ul id='open' class='text-shadow'>
-                <li class='openList'>o</li>
-                <li class='openList'>p</li>
-                <li class='openList'>e</li>
-                <li class='openList'>n</li>
-                <li class="space openList">0</li>
-                <li class='openList'>-</li>
-                <li class='openList'>24</li>
+                <li class='openList quicksand text-shadow'>o</li>
+                <li class='openList quicksand text-shadow'>p</li>
+                <li class='openList quicksand text-shadow'>e</li>
+                <li class='openList quicksand text-shadow'>n</li>
+                <li class="space openList quicksand text-shadow">0</li>
+                <li class='openList quicksand text-shadow'>-</li>
+                <li class='openList quicksand text-shadow'>24</li>
             </ul>
         </main>
         <section id="about">
@@ -128,7 +133,7 @@
         </section>
         <section id='contact'>
             <div class="contact-title">
-                <h3 class='contact-heading'><span class='drop-contact'>Cont</span>act <span class='contact-animate'>me</span></h3>
+                <h3 class='contact-heading quicksand text-shadow'><span class='drop-contact quicksand '>Cont</span>act <span class='contact-animate quicksand text-shadow'>me</span></h3>
             </div>
             <div class="icons">
                 <ul>
