favicon, project update

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=K2D:400,700|Quicksand:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=K2D:400,700|Quicksand:400,700" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -78,24 +81,30 @@
                     of my work, the rest is on my GitHub profile so feel free to check that out as well.</p>
             </div>
             <div class="workContainer">
-                    <a href="https://modest-newton-c47f34.netlify.com/" target="_blank">
-                        <div class="work">
-                            <div class="webPage imgBackground"></div>
-                            <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
-                        </div>
-                    </a>
-                    <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
-                        <div class="work">
-                            <div class="scrollAnimatedWebpage imgBackground"></div>
-                            <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
-                        </div>
-                    </a>
-                    <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
-                        <div class="work">
-                            <div class="responsiveWebpage imgBackground"></div>
-                            <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
-                        </div>
-                    </a>
+                <a href="https://quirky-carson-b3e64e.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="omnifood imgBackground"></div>
+                        <div class="about-project">Commercial web page. <br> HTML5, CSS3, JavaScript</div>
+                    </div>
+                </a>
+                <a href="https://modest-newton-c47f34.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="webPage imgBackground"></div>
+                        <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
+                    </div>
+                </a>
+                <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="scrollAnimatedWebpage imgBackground"></div>
+                        <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
+                    </div>
+                </a>
+                <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="responsiveWebpage imgBackground"></div>
+                        <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
+                    </div>
+                </a>
                 <a href="https://jolly-swanson-ba2fb1.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="typenspeak imgBackground"></div>
@@ -103,14 +112,14 @@
                             JavaScript</div>
                     </div>
                 </a>
-                
+
                 <a href="https://relaxed-kowalevski-f1dc94.netlify.com/#home-section" target="_blank">
                     <div class="work">
                         <div class="bootstrapWebpage imgBackground"></div>
                         <div class="about-project">Commercial web page.<br>HTML5, Bootstrap</div>
                     </div>
                 </a>
-                
+
                 <a href="https://modest-golick-efbbc9.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="loanCalculator imgBackground"></div>
@@ -133,7 +142,8 @@
         </section>
         <section id='contact'>
             <div class="contact-title">
-                <h3 class='contact-heading quicksand text-shadow'><span class='drop-contact quicksand '>Cont</span>act <span class='contact-animate quicksand text-shadow'>me</span></h3>
+                <h3 class='contact-heading quicksand text-shadow'><span class='drop-contact quicksand '>Cont</span>act
+                    <span class='contact-animate quicksand text-shadow'>me</span></h3>
             </div>
             <div class="icons">
                 <ul>
