my work quazzu project update

--- a/index.html
+++ b/index.html
@@ -71,21 +71,23 @@
         <section id='myWork'>
             <div class="section-content">
                 <h3 class="title">My Work</h3>
-                <p class="text">I'm familiar with these technologies: HTML5, CSS3, JavaScript, Bootstrap, Materialize,
+                <p class="text">I'm familiar with these technologies: HTML5, CSS3, JavaScript, Bootstrap, Materialize, jQuery,
                     NPM,
-                    Git, Sass and React. I still have to improve some of them but I would also like to learn Node,
-                    which I
-                    know a bit, and many other things as well. There's a long road in front of me but the journey of a
-                    thousand miles begins with a single step and these are one of my first. I don't like this game, I
-                    love
-                    it and I can't wait to do some other projects and improve my skills. You can take a look at some
-                    of my work, the rest is on my GitHub profile so feel free to check that out as well.</p>
+                    Git, Sass and React. I'm constantly improving all of them, but I'm also learning Node.js,
+                    since one of my goals is MERN stack. Take a look at some
+                    of the projects I've done, the rest is on my GitHub profile so feel free to check that out as well.</p>
             </div>
             <div class="workContainer">
                 <a href="https://quirky-carson-b3e64e.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="omnifood imgBackground"></div>
                         <div class="about-project">Commercial web page. <br> HTML5, CSS3, JavaScript</div>
+                    </div>
+                </a>
+                <a href="https://silly-nobel-e51715.netlify.com/" target="_blank">
+                    <div class="work">
+                        <div class="quazzu imgBackground"></div>
+                        <div class="about-project">Multi-page website. <br> Materialize, HTML5, CSS3, jQuery</div>
                     </div>
                 </a>
                 <a href="https://modest-newton-c47f34.netlify.com/" target="_blank">
