to-do list update

--- a/index.html
+++ b/index.html
@@ -126,8 +126,16 @@
                 <a href="https://modest-golick-efbbc9.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="loanCalculator imgBackground"></div>
-                        <div class="about-project">The app will calculate your loan rate.<br>HTML5, JavaScript,
+                        <div class="about-project">The app will calculate your loan rate.<br>JavaScript,
                             Bootstrap</div>
+                    </div>
+                </a>
+
+                <a href="https://dazzling-allen-842059.netlify.com/" target='_blank'>
+                    <div class="work">
+                        <div class="taskList imgBackground"></div>
+                        <div class="about-project">Make your own to-do list.<br>JavaScript,
+                            Materialize</div>
                     </div>
                 </a>
                 <a href="https://practical-minsky-17ebe4.netlify.com/" target='_blank'>
