--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 </head>
 
 <body>
@@ -69,6 +70,7 @@
             <a href='cv/BojanMilutinovic_CV.pdf' download id='cv'>Download CV</a>
         </section>
         <section id='myWork'>
+            <div id="particles-js"></div>
             <div class="section-content">
                 <h3 class="title">My Work</h3>
                 <p class="text">I'm familiar with these technologies: HTML5, CSS3, JavaScript, Bootstrap, Materialize, jQuery,
@@ -90,22 +92,11 @@
                         <div class="about-project">Multi-page website. <br> Materialize, HTML5, CSS3, jQuery</div>
                     </div>
                 </a>
-                <a href="https://modest-newton-c47f34.netlify.com/" target="_blank">
-                    <div class="work">
-                        <div class="webPage imgBackground"></div>
-                        <div class="about-project">Simple web page. <br> HTML5, CSS3, JavaScript</div>
-                    </div>
-                </a>
+            
                 <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="scrollAnimatedWebpage imgBackground"></div>
                         <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
-                    </div>
-                </a>
-                <a href="https://admiring-northcutt-7f96ab.netlify.com/" target="_blank">
-                    <div class="work">
-                        <div class="responsiveWebpage imgBackground"></div>
-                        <div class="about-project">Responsive web page.<br>HTML5, Bootstrap, CSS3</div>
                     </div>
                 </a>
                 <a href="https://jolly-swanson-ba2fb1.netlify.com/" target="_blank">
@@ -116,20 +107,6 @@
                     </div>
                 </a>
 
-                <a href="https://relaxed-kowalevski-f1dc94.netlify.com/#home-section" target="_blank">
-                    <div class="work">
-                        <div class="bootstrapWebpage imgBackground"></div>
-                        <div class="about-project">Commercial web page.<br>HTML5, Bootstrap</div>
-                    </div>
-                </a>
-
-                <a href="https://modest-golick-efbbc9.netlify.com/" target='_blank'>
-                    <div class="work">
-                        <div class="loanCalculator imgBackground"></div>
-                        <div class="about-project">The app will calculate your loan rate.<br>JavaScript,
-                            Bootstrap</div>
-                    </div>
-                </a>
 
                 <a href="https://dazzling-allen-842059.netlify.com/" target='_blank'>
                     <div class="work">
@@ -171,6 +148,7 @@
         </footer>
     </div>
     <script src="js/main.js"></script>
+    <script src="js/particles.min.js"></script>
     <script src="js/scrollReveal.js"></script>
 </body>
 
