lyricsSearch and contactManager added

--- a/index.html
+++ b/index.html
@@ -106,8 +106,6 @@
                             JavaScript</div>
                     </div>
                 </a>
-
-
                 <a href="https://dazzling-allen-842059.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="taskList imgBackground"></div>
@@ -119,6 +117,20 @@
                     <div class="work">
                         <div class="githubFinder imgBackground"></div>
                         <div class="about-project">Search for GitHub users.<br>HTML5, JavaScript,
+                            Bootstrap</div>
+                    </div>
+                </a>
+                <a href="https://agitated-pike-4fda2f.netlify.com/" target='_blank'>
+                    <div class="work">
+                        <div class="contactManager imgBackground"></div>
+                        <div class="about-project">Manage your contacts.<br>React,
+                            Bootstrap</div>
+                    </div>
+                </a>
+                <a href="https://distracted-ride-8c4866.netlify.com/" target='_blank'>
+                    <div class="work">
+                        <div class="lyricsSearch imgBackground"></div>
+                        <div class="about-project">Search for song lyrics.<br>React,
                             Bootstrap</div>
                     </div>
                 </a>
