--- a/index.html
+++ b/index.html
@@ -80,64 +80,60 @@
                     of the projects I've done, the rest is on my GitHub profile so feel free to check that out as well.</p>
             </div>
             <div class="workContainer">
-                <a href="https://quirky-carson-b3e64e.netlify.com/" target="_blank">
+                <a href="https://flavourfull.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="omnifood imgBackground"></div>
                         <div class="about-project">Commercial web page. <br> HTML5, CSS3, JavaScript</div>
                     </div>
                 </a>
-                <a href="https://silly-nobel-e51715.netlify.com/" target="_blank">
+                <a href="https://quazzu-materialize.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="quazzu imgBackground"></div>
                         <div class="about-project">Multi-page website. <br> Materialize, HTML5, CSS3, jQuery</div>
                     </div>
                 </a>
             
-                <a href="https://dazzling-shannon-83f741.netlify.com/" target="_blank">
+                <a href="https://tech-scroll.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="scrollAnimatedWebpage imgBackground"></div>
                         <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://jolly-swanson-ba2fb1.netlify.com/" target="_blank">
+                <a href="https://typespeak.netlify.com/" target="_blank">
                     <div class="work">
                         <div class="typenspeak imgBackground"></div>
                         <div class="about-project">Type some text and let the app read it for you.<br>HTML5, Bootstrap,
                             JavaScript</div>
                     </div>
                 </a>
-                <a href="https://dazzling-allen-842059.netlify.com/" target='_blank'>
+                <a href="https://listtasks.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="taskList imgBackground"></div>
                         <div class="about-project">Make your own to-do list.<br>JavaScript,
                             Materialize</div>
                     </div>
                 </a>
-                <a href="https://practical-minsky-17ebe4.netlify.com/" target='_blank'>
+                <a href="https://searchgithub.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="githubFinder imgBackground"></div>
                         <div class="about-project">Search for GitHub users.<br>HTML5, JavaScript,
                             Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://agitated-pike-4fda2f.netlify.com/" target='_blank'>
+                <a href="https://managecontacts.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="contactManager imgBackground"></div>
                         <div class="about-project">Manage your contacts.<br>React,
                             Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://distracted-ride-8c4866.netlify.com/" target='_blank'>
+                <a href="https://lyrics-search.netlify.com/" target='_blank'>
                     <div class="work">
                         <div class="lyricsSearch imgBackground"></div>
                         <div class="about-project">Search for song lyrics.<br>React,
                             Bootstrap</div>
                     </div>
                 </a>
-                <div class="work">
-                    <div class="robofriends imgBackground progress"></div>
-                    <div class="about-project">Let the app find your robo-friend.<br>React</div>
-                </div>
             </div>
         </section>
         <section id='contact'>
