--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     can
                     download my CV or scroll the page to see my work.</p>
             </div>
-            <a href='cv/BojanMilutinovic_CV.pdf' download id='cv'>Download CV</a>
+            <a href="cv/Bojan_Milutinovic_CV.pdf" download id='cv'>Download CV</a>
         </section>
         <section id='myWork'>
             <div id="particles-js"></div>
