--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Bojan Milutinovic Portfolio</title>
+    <meta name="description"
+        content="If you need a unique website or you are looking for a reliable web developer, then you are at the right place." />
+    <title>Front-End Developer Bojan Milutinovic</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/queries.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=K2D:400,700|Quicksand:400,700" rel="stylesheet">
-    <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script> -->
 </head>
 
 <body>
@@ -28,10 +29,10 @@
             </div>
             <nav class="menu">
                 <div class="menu-list">
-                    <div class="menu-item"><a href="#home">Home</a></div>
-                    <div class="menu-item"><a href="#about">About</a></div>
-                    <div class="menu-item"><a href="#myWork">My Work</a></div>
-                    <div class="menu-item"><a href="#contact">Contact</a></div>
+                    <div class="menu-item"><a href="#home" title="Home Section">Home</a></div>
+                    <div class="menu-item"><a href="#about" title="About Section">About</a></div>
+                    <div class="menu-item"><a href="#myWork" title="My Work Section">My Work</a></div>
+                    <div class="menu-item"><a href="#contact" title="Contact Section">Contact</a></div>
                 </div>
                 <div class="menu-quote">
                     <p><q id='quote-text'></q><br>
@@ -40,19 +41,19 @@
             </nav>
         </header>
         <main id='home'>
-            <h1 class='main-heading'>
-                <span class='letters'>B</span>
-                <span class='letters'>o</span>
-                <span class='letters'>j</span>
-                <span class='letters'>a</span>
-                <span class='letters'>n</span>
-            </h1>
-            <h3 class='sub-heading text-shadow quicksand'>front-end developer</h3>
+            <div class='main-heading'>
+                <span translate='no' class='letters'>B</span>
+                <span translate='no' class='letters'>o</span>
+                <span translate='no' class='letters'>j</span>
+                <span translate='no' class='letters'>a</span>
+                <span translate='no' class='letters'>n</span>
+            </div>
+            <h1 translate='no' class='sub-heading text-shadow quicksand'>Front-End developer</h1>
             <ul id='open' class='text-shadow'>
-                <li class='openList quicksand text-shadow'>o</li>
-                <li class='openList quicksand text-shadow'>p</li>
-                <li class='openList quicksand text-shadow'>e</li>
-                <li class='openList quicksand text-shadow'>n</li>
+                <li translate='no' class='openList quicksand text-shadow'>o</li>
+                <li translate='no' class='openList quicksand text-shadow'>p</li>
+                <li translate='no' class='openList quicksand text-shadow'>e</li>
+                <li translate='no' class='openList quicksand text-shadow'>n</li>
                 <li class="space openList quicksand text-shadow">0</li>
                 <li class='openList quicksand text-shadow'>-</li>
                 <li class='openList quicksand text-shadow'>24</li>
@@ -67,67 +68,69 @@
                     can
                     download my CV or scroll the page to see my work.</p>
             </div>
-            <a href="cv/Bojan_Milutinovic_CV.pdf" download id='cv'>Download CV</a>
+            <a href="cv/Bojan_Milutinovic_CV.pdf" title="Download CV" download id='cv'>Download CV</a>
         </section>
         <section id='myWork'>
-            <div id="particles-js"></div>
+            <!-- <div id="particles-js"></div> -->
             <div class="section-content">
                 <h3 class="title">My Work</h3>
-                <p class="text">I'm familiar with these technologies: HTML5, CSS3, JavaScript, Bootstrap, Materialize, jQuery,
+                <p class="text">I'm familiar with these technologies: HTML5, CSS3, JavaScript, Bootstrap, Materialize,
+                    jQuery,
                     NPM,
                     Git, Sass and React. I'm constantly improving all of them, but I'm also learning Node.js,
                     since one of my goals is MERN stack. Take a look at some
-                    of the projects I've done, the rest is on my GitHub profile so feel free to check that out as well.</p>
+                    of the projects I've done, the rest is on my GitHub profile so feel free to check that out as well.
+                </p>
             </div>
             <div class="workContainer">
-                <a href="https://flavourfull.netlify.com/" target="_blank">
+                <a href="https://flavourfull.netlify.com/" title='Commercial web page' target="_blank">
                     <div class="work">
                         <div class="omnifood imgBackground"></div>
                         <div class="about-project">Commercial web page. <br> HTML5, CSS3, JavaScript</div>
                     </div>
                 </a>
-                <a href="https://quazzu-materialize.netlify.com/" target="_blank">
+                <a href="https://quazzu-materialize.netlify.com/" title="Multi-page website" target="_blank">
                     <div class="work">
                         <div class="quazzu imgBackground"></div>
                         <div class="about-project">Multi-page website. <br> Materialize, HTML5, CSS3, jQuery</div>
                     </div>
                 </a>
-            
-                <a href="https://tech-scroll.netlify.com/" target="_blank">
+
+                <a href="https://tech-scroll.netlify.com/" title="Animated web page" target="_blank">
                     <div class="work">
                         <div class="scrollAnimatedWebpage imgBackground"></div>
                         <div class="about-project">Animated web page.<br>HTML5, Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://typespeak.netlify.com/" target="_blank">
+                <a href="https://typespeak.netlify.com/" title="Web app" target="_blank">
                     <div class="work">
                         <div class="typenspeak imgBackground"></div>
                         <div class="about-project">Type some text and let the app read it for you.<br>HTML5, Bootstrap,
                             JavaScript</div>
                     </div>
                 </a>
-                <a href="https://listtasks.netlify.com/" target='_blank'>
+                <a href="https://listtasks.netlify.com/" title="To-do list" target='_blank'>
                     <div class="work">
                         <div class="taskList imgBackground"></div>
                         <div class="about-project">Make your own to-do list.<br>JavaScript,
                             Materialize</div>
                     </div>
                 </a>
-                <a href="https://searchgithub.netlify.com/" target='_blank'>
+                <a href="https://searchgithub.netlify.com/" title="Web App" target='_blank'>
                     <div class="work">
                         <div class="githubFinder imgBackground"></div>
                         <div class="about-project">Search for GitHub users.<br>HTML5, JavaScript,
                             Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://managecontacts.netlify.com/" target='_blank'>
+                <a href="https://managecontacts.netlify.com/" title="React app" target='_blank'>
                     <div class="work">
                         <div class="contactManager imgBackground"></div>
                         <div class="about-project">Manage your contacts.<br>React,
                             Bootstrap</div>
                     </div>
                 </a>
-                <a href="https://lyrics-search.netlify.com/" target='_blank'>
+                <a href="https://lyrics-search.netlify.com/" title="React app" target='_blank'>
                     <div class="work">
                         <div class="lyricsSearch imgBackground"></div>
                         <div class="about-project">Search for song lyrics.<br>React,
@@ -143,11 +146,15 @@
             </div>
             <div class="icons">
                 <ul>
-                    <li><a href='tel:381-065-3000-313'><i class="fas fa-phone-square"></i></a></li>
-                    <li><a href='https://www.linkedin.com/in/bojan-milutinovic-938b62117/' target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href='https://github.com/BojanMilutinovic1811' target='_blank'><i class="fab fa-github-square"></i></a></li>
-                    <li><a href='https://www.facebook.com/SOYCDBM' target='blank'><i class="fab fa-facebook"></i></a></li>
-                    <li><a href='mailto:bojanmilutinovic1811@gmail.com'><i class="fas fa-envelope-square"></i></a></li>
+                    <li><a href='tel:381-065-3000-313' title="Phone Number"><i class="fas fa-phone-square"></i></a></li>
+                    <li><a href='https://www.linkedin.com/in/bojan-milutinovic-938b62117/' target="_blank"
+                            title="Linkedin Profile"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href='https://github.com/BojanMilutinovic1811' title="GitHub Profile" target='_blank'><i
+                                class="fab fa-github-square"></i></a></li>
+                    <li><a href='https://www.facebook.com/SOYCDBM' title="Facebook Profile" target='blank'><i
+                                class="fab fa-facebook"></i></a></li>
+                    <li><a href='mailto:bojanmilutinovic1811@gmail.com' title="Mail"><i
+                                class="fas fa-envelope-square"></i></a></li>
                 </ul>
             </div>
         </section>
@@ -156,8 +163,8 @@
         </footer>
     </div>
     <script src="js/main.js"></script>
-    <script src="js/particles.min.js"></script>
-    <script src="js/scrollReveal.js"></script>
+    <!-- <script src="js/particles.min.js"></script> -->
+    <!-- <script src="js/scrollReveal.js"></script> -->
 </body>
 
 </html>
